--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,1 +1,11 @@
-<p>footer works!</p>
+<footer class="text-muted py-5">
+  <div class="container">
+    <p class="float-end mb-1">
+      <a href="#">Back to top</a>
+    </p>
+    <p>
+      © {{ fullYear }} Crytek, Inc. · <a href="#">Privacy</a> ·
+      <a href="#">Terms</a>
+    </p>
+  </div>
+</footer>
