--- a/src/app/components/card/card.component.html
+++ b/src/app/components/card/card.component.html
@@ -1,1 +1,24 @@
-<p>card works!</p>
+<div class="card shadow-sm">
+  <picture>
+    <img
+      class="card-img-top"
+      src="https://getbootstrap.com/docs/5.1/examples/features/unsplash-photo-1.jpg"
+      alt=""
+    />
+  </picture>
+
+  <div class="card-body">
+    <h3>Lorem Ipsum</h3>
+    <p class="card-text">
+      Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+      Lorem Ipsum has been the industry's standard dummy text ever since the
+      1500s, when an unknown printer took a galley of type and scrambled it to
+      make a type specimen book.
+    </p>
+    <div class="d-flex justify-content-between align-items-center">
+      <a href="#" class="icon-link"> See more > </a>
+
+      <small class="text-muted">10 mins</small>
+    </div>
+  </div>
+</div>
