add validation for reactive form

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
   <div class="container-fluid">
-    <a class="navbar-brand" routerLink="/">Blog</a>
+    <a class="navbar-brand" routerLink="/">Desafios</a>
     <button
       class="navbar-toggler"
       type="button"
@@ -27,6 +27,12 @@
         <li class="nav-item">
           <a class="nav-link" routerLink="/blog" routerLinkActive="active"
             >Blog</a
+          >
+        </li>
+
+        <li class="nav-item">
+          <a class="nav-link" routerLink="/desafio-3" routerLinkActive="active"
+            >Desafio 3</a
           >
         </li>
       </ul>
